--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <html>
   <title>Logika Project-1</title>
-  <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+  <body style="background:lightblue;font-family:sans-serif;"> >
+    <header>
+    <h1 style="color:purple; text-align:center"> Jennie Kim</h1>
+    </header>
+    <main>
+<p> Дженні Кім - нар. 16 січня 1996, Сеул, Південна Корея більш відома за мономімом Дженні  — південнокорейська реперка, учасниця гурту BLACKPINK. Народилася у Кореї, протягом п'яти років Дженні навчалася у Новій Зеландії, перед тим як повернутися до Південної Кореї в 2010 році. Дебютувала як учасниця дівочого гурту BLACKPINK у 2016 році. У листопаді 2018 випустила перший сольний сингл-альбом Solo. У 2023 році дебютувала як акторка в американському серіалі «Ідол» під псевдонімом Дженні Рубі Джейн. Минулого року разом з іншими учасницями BLACKPINK, отримала орден Британської імперії.
+</p>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Kim_Jennie_%28%EA%B9%80%EC%A0%9C%EB%8B%88%29_05.jpg/270px-Kim_Jennie_%28%EA%B9%80%EC%A0%9C%EB%8B%88%29_05.jpg">
+    </main>
+     <p> Більше про неї ⭠ </p>
+    <footer>
+    </footer>
   </body> 
 </html>
