--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
+  <head> 
   <title>Logika Project-1</title>
+    <link rel="stylesheet" href="style.css"/>
+  </head>
   <body style="background:lightblue;font-family:sans-serif;"> >
     <header>
     <h1 style="color:purple; text-align:center"> Jennie Kim</h1>
